--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 
-addopts = -v --html=../TestReports/report.html  --self-contained-html
+addopts = -v --html=TestReports/report.html  --self-contained-html
