--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,10 @@
 [pytest]
 
+
+python_files = test_*.py *_tests.py
+
+python_classes = Test* *Tests
+
+python_functions = test_* check_*
+
 addopts = -v --html=TestReports/report.html  --self-contained-html
