branch updated testcase

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,4 +7,9 @@ python_classes = Test* *Tests
 
 python_functions = test_* check_*
 
-addopts = -v --html=tests/TestReports/report.html  --self-contained-html
+;addopts = -v --html=tests/TestReports1/report.html  --self-contained-html
+
+;addopts = --alluredir=tests/allure-results-branch
+
+;addopts = --alluredir=tests/allure-result -s
+;testpaths = tests
